--- a/templates/spotify-flask.html
+++ b/templates/spotify-flask.html
@@ -15,7 +15,7 @@
 				<h1>SPOTify Tracks</h1>
 			</div>
 		</div>
-		<form class="form" action = "http://localhost:5000/" method = "post">
+		<form class="form" action = "/" method = "post">
 			<div class="row">
 				<div class="eight columns">	
 					<p class="text_box">
