--- a/templates/spotify-flask.html
+++ b/templates/spotify-flask.html
@@ -6,10 +6,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+	<!-- icons cdn -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/4.15.0/1001tracklists.min.js" integrity="sha512-Q7JRUZk4wv3GGVI2edmxyu86wUXY+rlV5w26e985rQZiUefgnU5VtKjFlMz66iluDVAAawc2lpnq70CyScL4oQ==" crossorigin="anonymous"></script>
 </head>
 
 <body>
-	<div class="container">
+
+	<div class="container content">
 		<div class="row">
 			<div class="twelve columns">
 				<h1>SPOTify Tracks</h1>
@@ -17,37 +21,62 @@
 		</div>
 		<form class="form" action = "/" method = "post">
 			<div class="row">
-				<div class="eight columns">	
+				<div class="ten columns">	
 					<p class="text_box">
 						<input class="text_box_input" type="text" placeholder="Surf for an artist or song" name = "nm" />
 					</p>
 				</div>
-				<div class="four columns">
-					<input class="submit_button" type = "submit" value = "submit" />
+				<div class="two columns">
+					<input class="submit_button whitebtn" type = "submit" value = "submit" />
 				</div>
 			</div>
 		</form>
 
 		{% if tracks %} 
-		<p>here are the top 10 tracks</p>
+		<p>Here are the top 10 tracks</p>
 		{% for track in tracks %}
 		<div class="tile row">
 			<div class="four columns">
 				<img src={{track['album']['images'][1]['url']}}>
 			</div>	
 
-				<div class="six columns">
-					<p class="song_name">{{track['name']}}</p>
-					<p class="artist_name">{{track['artists'][0]['name']}}</p>
+			<div class="six columns songinfo">
+				<p class="song_name">{{track['name']}}</p>
+				<p class="artist_name">{{track['artists'][0]['name']}}</p>
 
 				<audio controls>
 					<source src="{{track['preview_url']}}" type="">
 				</audio>
-					<p class="audio_link"><a href="{{track['external_urls']['spotify']}}"><i class="fab fa-spotify"></i>Listen on Spotify</a></p>
+				<p class="audio_link">
+					<a href="{{track['external_urls']['spotify']}}">
+						<img src="https://logodownload.org/wp-content/uploads/2020/03/listen-on-spotify.png">
+					</a>
+				</p>
 
 			</div>
 		</div>
 		{% endfor %}
 		{% endif %}
-	</body>
-	</html>
+	</div>
+	<footer class="row footer">
+					
+		<p class="twelve columns">Made by <strong>Himanshu kamal</strong></p>
+		<p class="twelve columns">
+			Hosted on
+			<a href="https://github.com/himanshukamal/spotify-music">
+			<span class="white_icon"><i class="fab fa-github"></i></span>
+			</a>
+		</p>
+		<p class="twelve columns">
+			<span class="white_icon"><i class="fab fa-python"></i></span>
+			<span class="white_icon"><i class="fab fa-spotify"></i></span>
+			<span class="white_icon"><i class="fab fa-html5"></i></span>
+			<span class="white_icon"><i class="fab fa-font-awesome"></i></span>
+			<span class="white_icon"><i class="fab fa-css3-alt"></i></span>
+			<!-- <img class="footer_icon white_icon" src="{{url_for('static',filename='icons/flask.svg')}}"> -->
+			<!-- <img class="footer_icon" src="{{url_for('static',filename='icons/heroku.svg')}}"> -->
+			<!-- <img class="footer_icon white_icon" src="{{url_for('static',filename='icons/jinja.svg')}}"> -->
+		</p>	
+	</footer>
+</body>
+</html>
